--- a/award.html
+++ b/award.html
@@ -211,34 +211,52 @@
 	{ src: "img/43_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
 	{ src: "img/44_ГрэйсГрейлэнд.png", caption: "Староста факультета Грэйс Грейлэнд, 4 курс" },
 	{ src: "img/45_ФиломенаФламарион.png", caption: "Профессор Филомена Фламарион" }, 
-	{ src: "img/51_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },    
+	{ src: "img/51_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" }, 
+	{ src: "img/75_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
 	{ src: "img/46_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
 	{ src: "img/58_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
 	{ src: "img/61_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/72_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/47_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
 	{ src: "img/48_АриаднаФрост.png", caption: "Ариадна Фрост, Гриффиндор, 3 курс" },
+	{ src: "img/87_Кейн.png", caption: "Даррен Кейн, продавец лавки "Все для Зельеварения"" },
 	{ src: "img/49_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
 	{ src: "img/52_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
 	{ src: "img/56_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
+	{ src: "img/83_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
 	{ src: "img/62_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/77_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
 	{ src: "img/66_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
 	{ src: "img/50_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
 	{ src: "img/59_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+	{ src: "img/85_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Маггического Лондона" },
 	{ src: "img/63_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
 	{ src: "img/53_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/78_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
 	{ src: "img/67_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
+	{ src: "img/82_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
+	{ src: "img/71_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/54_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
 	{ src: "img/64_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
 	{ src: "img/55_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
 	{ src: "img/57_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
+	{ src: "img/73_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/60_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
 	{ src: "img/65_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
 	{ src: "img/68_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
 	{ src: "img/69_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
-
+	{ src: "img/74_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
+	{ src: "img/79_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
+	{ src: "img/88_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+	{ src: "img/70_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
+	{ src: "img/80_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
+	{ src: "img/86_Кейн.png", caption: "Даррен Кейн, продавец лавки "Все для Зельеварения"" },
+	{ src: "img/76_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
+	{ src: "img/81_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
+	{ src: "img/84_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Маггического Лондона" },
     ];
 
-    const rowPattern = [6, 5, 6, 5, 5];
+    const rowPattern = [6, 5, 6, 5, 6, 5, 6, 7];
     const mainGallery = document.getElementById('main-gallery');
 
     function renderGallery() {
