--- a/award.html
+++ b/award.html
@@ -219,7 +219,7 @@
 	{ src: "img/72_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/47_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
 	{ src: "img/48_АриаднаФрост.png", caption: "Ариадна Фрост, Гриффиндор, 3 курс" },
-	{ src: "img/87_Кейн.png", caption: "Даррен Кейн, продавец лавки "Все для Зельеварения"" },
+	{ src: "img/87_Кейн.png", caption: "Даррен Кейн, продавец лавки 'Все для Зельеварения'" },
 	{ src: "img/49_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
 	{ src: "img/52_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
 	{ src: "img/56_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
@@ -250,7 +250,7 @@
 	{ src: "img/88_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
 	{ src: "img/70_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/80_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
-	{ src: "img/86_Кейн.png", caption: "Даррен Кейн, продавец лавки "Все для Зельеварения"" },
+	{ src: "img/86_Кейн.png", caption: "Даррен Кейн, продавец лавки 'Все для Зельеварения'" },
 	{ src: "img/76_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
 	{ src: "img/81_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
 	{ src: "img/84_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Маггического Лондона" },
