--- a/award.html
+++ b/award.html
@@ -229,7 +229,7 @@
 	{ src: "img/66_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
 	{ src: "img/50_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
 	{ src: "img/59_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
-	{ src: "img/85_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Маггического Лондона" },
+	{ src: "img/85_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Магического Лондона" },
 	{ src: "img/63_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
 	{ src: "img/53_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
 	{ src: "img/78_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
@@ -253,10 +253,10 @@
 	{ src: "img/86_Кейн.png", caption: "Даррен Кейн, продавец лавки 'Все для Зельеварения'" },
 	{ src: "img/76_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
 	{ src: "img/81_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
-	{ src: "img/84_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Маггического Лондона" },
+	{ src: "img/84_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Магического Лондона" },
     ];
 
-    const rowPattern = [6, 5, 6, 5, 6, 5, 6, 7];
+    const rowPattern = [7, 6, 7, 6, 7, 6, 7];
     const mainGallery = document.getElementById('main-gallery');
 
     function renderGallery() {
