--- a/award.html
+++ b/award.html
@@ -256,7 +256,7 @@
 	{ src: "img/84_Грейс.png", caption: "Grace Diamond-de-Kur, Мэр Хогсмида и Магического Лондона" },
     ];
 
-    const rowPattern = [7, 6, 7, 6, 7, 6, 7];
+    const rowPattern = [6, 5, 6, 5, 6, 5, 6, 7];
     const mainGallery = document.getElementById('main-gallery');
 
     function renderGallery() {
