--- a/award.html
+++ b/award.html
@@ -226,6 +226,7 @@
 	{ src: "img/87_Кейн.png", caption: "Даррен Кейн, продавец лавки 'Все для Зельеварения'" },
 	{ src: "img/49_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
 	{ src: "img/52_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/108_BE.png", caption: "Блейк Эллингтон, Когтевран, 5 курс" },
 	{ src: "img/56_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
 	{ src: "img/83_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
 	{ src: "img/102_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
@@ -250,6 +251,7 @@
 	{ src: "img/57_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
 	{ src: "img/73_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/60_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+	{ src: "img/105_WJ.png", caption: "William Jefferson, 5 курс" },
 	{ src: "img/65_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
 	{ src: "img/68_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
 	{ src: "img/92_Gugo.png", caption: "Gugo Helwell, Главный лекарь" },
@@ -262,6 +264,7 @@
 	{ src: "img/70_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 	{ src: "img/80_Хелена.png", caption: "Хелена Кейн, Когтевран, 1 курс" },
 	{ src: "img/98_ХатториРайто.png", caption: "Хаттори Райто, Директор школы" },
+	{ src: "img/106_WJ.png", caption: "William Jefferson, 5 курс" },
 	{ src: "img/86_Кейн.png", caption: "Даррен Кейн, продавец лавки 'Все для Зельеварения'" },
 	{ src: "img/103_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
 	{ src: "img/76_Джульетта.png", caption: "Julietta Helwell-de-Kur, Когтевран, 1 курс" },
@@ -271,9 +274,11 @@
 	{ src: "img/95_МияХейг.png", caption: "Мия Хейг, Когтевран, 3 курс" },
 	{ src: "img/99_ХатториРайто.png", caption: "Хаттори Райто, Директор школы" },
 	{ src: "img/104_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
+	{ src: "img/107_WJ.png", caption: "William Jefferson, 5 курс" },
+
     ];
 
-    const rowPattern = [6, 5, 6, 5, 6, 5, 6, 5, 6, 5, 6, 2];
+    const rowPattern = [6, 5, 6, 5, 6, 5, 6, 5, 6, 5, 6, 5];
     const mainGallery = document.getElementById('main-gallery');
 
     function renderGallery() {
